--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -36,30 +36,35 @@
           [alt]="movie.Title" 
           class="movie-image" />
         <mat-card-actions>
-          <button
-            mat-button
-            color="primary"
-            (click)="openGenreDialog(movie.Genre)">
-            Genre
-          </button>
-          <button
-            mat-button
-            color="primary"
-            (click)="openDirectorDialog(movie.Director)">
-            Director
-          </button>
-          <button
-            mat-button
-            color="primary"
-            (click)="openSynopsisDialog(movie)">
-            Synopsis
-          </button>
-          <mat-icon 
-            [class.favorite-active]="isFavorite(movie._id)"
-            (click)="toggleFavorite(movie)"
-            class="favorite-icon">
-            {{ isFavorite(movie._id) ? 'favorite' : 'favorite_border' }}
-          </mat-icon>
+          <div class="action-buttons-row">
+            <button
+              mat-button
+              color="primary"
+              (click)="openGenreDialog(movie.Genre)">
+              Genre
+            </button>
+            <button
+              mat-button
+              color="primary"
+              (click)="openDirectorDialog(movie.Director)">
+              Director
+            </button>
+            <button
+              mat-button
+              color="primary"
+              (click)="openSynopsisDialog(movie)">
+              Synopsis
+            </button>
+          </div>
+          <div class="favorite-row">
+            <mat-icon 
+              [class.favorite-active]="isFavorite(movie._id)"
+              (click)="toggleFavorite(movie)"
+              class="favorite-icon"
+              title="{{ isFavorite(movie._id) ? 'Remove from favorites' : 'Add to favorites' }}">
+              {{ isFavorite(movie._id) ? 'favorite' : 'favorite_border' }}
+            </mat-icon>
+          </div>
         </mat-card-actions>
       </mat-card>
     </div>
